# gretl-ebpf-agent

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
gretl-ebpf-agent/: Cargo.toml  build.rs
gretl-ebpf-agent/src/: classifier.rs  events.rs  idle.rs  main.rs  reporter.rs
gretl-ebpf-common/: Cargo.toml
gretl-ebpf-common/src/: lib.rs
gretl-ebpf-ebpf/: Cargo.toml
gretl-ebpf-ebpf/src/: main.rs
