[package]
name = "gretl-ebpf-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gretl-ebpf"
path = "src/main.rs"

[dependencies]
# eBPF loader
aya        = { version = "0.13", features = ["async_tokio"] }
aya-log    = "0.2"

# Shared event types
gretl-ebpf-common = { path = "../gretl-ebpf-common", features = ["user"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for OTLP reporting
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# CLI + logging
clap       = { version = "4", features = ["derive", "env"] }
log        = "0.4"
env_logger = "0.10"
anyhow     = "1"

# System helpers
libc    = "0.2"
nix     = { version = "0.27", features = ["signal"] }
